@@ -1,0 +1,17 @@
+/***************************************************************************
+ *   Copyright (C) 2007 by Konstantin V. Arkhipov                          *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU Lesser General Public License as        *
+ *   published by the Free Software Foundation; either version 3 of the    *
+ *   License, or (at your option) any later version.                       *
+ *                                                                         *
+ ***************************************************************************/
+/* $Id$ */
+
+#ifndef ONPHP_CORE_COMPLEX_PRIMITIVE_H
+#define ONPHP_CORE_COMPLEX_PRIMITIVE_H
+
+ONPHP_STANDART_CLASS(ComplexPrimitive);
+
+#endif /* ONPHP_CORE_COMPLEX_PRIMITIVE_H */
