@@ -2,7 +2,8 @@
 
 2007-11-04	Konstantin V. Arkhipov
 
-	* ext/src/core/Form/: BasePrimitive, RangedPrimitive implemented.
+	* ext/src/core/Form/: BasePrimitive, RangedPrimitive, ComplexPrimitive
+	implemented.
 
 2007-11-03	Konstantin V. Arkhipov
 
